src/objects/Desk_Message__c.object
<!--
  ~ Copyright (c) 2017, Salesforce.com, Inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomObject>
    <description>This custom object is used as a temporary holding area for migrating messages. This is needed because we are using the bulk API to insert cases, and we cannot depend on the case existing when we try to import the associated messages. So the messages are imported to this custom object in a serialized manner, and then after cases have finished migrating, the messages are imported.

After the items in this object have been migrated, this object should be cleared and/or deleted.</description>
    <fields>
        <fullName>Data__c</fullName>
        <description>This field holds the JSON encoded data representing the feed items for the case.</description>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <description>This field holds any errors that occurred during the conversion process.</description>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field indicates if the record has been converted into the appropriate Salesforce.com object or if the conversion process failed.</description>
        <label>Status</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <label>Desk Message</label>
    <nameField>
        <label>Desk Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desk Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>